# JPEG_compression

./: .gitignore  CMakeLists.txt  README.md  git_repo_name.txt  main.cpp
include/: dct.h  image_utils.h  quantization.h
src/: dct.cpp  image_utils.cpp  quantization.cpp
